editor ok sem justify

--- a/src/templates/lists.hbs
+++ b/src/templates/lists.hbs
@@ -21,6 +21,13 @@
       <span class="glyphicon glyphicon-align-right"></span>
     {{/if}}
     </a>
+    <!--<a class="btn {{#if options.toolbar.size}}btn-{{options.toolbar.size}}{{/if}} btn-default" data-wysihtml5-command="justifyFull" title="{{locale.lists.justifyAlign}}" tabindex="-1">
+    {{#if options.toolbar.fa}}
+      <span class="fa fa-align-justify"></span>
+    {{else}}
+      <span class="glyphicon glyphicon-align-justify"></span>
+    {{/if}}
+  </a>-->
     <a class="btn {{#if options.toolbar.size}}btn-{{options.toolbar.size}}{{/if}} btn-default" data-wysihtml5-command="insertUnorderedList" title="{{locale.lists.unordered}}" tabindex="-1">
     {{#if options.toolbar.fa}}
       <span class="fa fa-list-ul"></span>
