justify e usando style

--- a/src/templates/lists.hbs
+++ b/src/templates/lists.hbs
@@ -1,33 +1,33 @@
 <li>
   <div class="btn-group">
-    <a class="btn {{#if options.toolbar.size}}btn-{{options.toolbar.size}}{{/if}} btn-default" data-wysihtml5-command="justifyLeft" title="{{locale.lists.leftAlign}}" tabindex="-1">
+    <a class="btn {{#if options.toolbar.size}}btn-{{options.toolbar.size}}{{/if}} btn-default" data-wysihtml5-command="alignLeftStyle" title="{{locale.lists.leftAlign}}" tabindex="-1">
     {{#if options.toolbar.fa}}
       <span class="fa fa-align-left"></span>
     {{else}}
       <span class="glyphicon glyphicon-align-left"></span>
     {{/if}}
     </a>
-    <a class="btn {{#if options.toolbar.size}}btn-{{options.toolbar.size}}{{/if}} btn-default" data-wysihtml5-command="justifyCenter" title="{{locale.lists.centerAlign}}" tabindex="-1">
+    <a class="btn {{#if options.toolbar.size}}btn-{{options.toolbar.size}}{{/if}} btn-default" data-wysihtml5-command="alignCenterStyle" title="{{locale.lists.centerAlign}}" tabindex="-1">
     {{#if options.toolbar.fa}}
       <span class="fa fa-align-center"></span>
     {{else}}
       <span class="glyphicon glyphicon-align-center"></span>
     {{/if}}
     </a>
-    <a class="btn {{#if options.toolbar.size}}btn-{{options.toolbar.size}}{{/if}} btn-default" data-wysihtml5-command="justifyRight" title="{{locale.lists.rightAlign}}" tabindex="-1">
+    <a class="btn {{#if options.toolbar.size}}btn-{{options.toolbar.size}}{{/if}} btn-default" data-wysihtml5-command="alignRightStyle" title="{{locale.lists.rightAlign}}" tabindex="-1">
     {{#if options.toolbar.fa}}
       <span class="fa fa-align-right"></span>
     {{else}}
       <span class="glyphicon glyphicon-align-right"></span>
     {{/if}}
     </a>
-    <!--<a class="btn {{#if options.toolbar.size}}btn-{{options.toolbar.size}}{{/if}} btn-default" data-wysihtml5-command="justifyFull" title="{{locale.lists.justifyAlign}}" tabindex="-1">
+    <a class="btn {{#if options.toolbar.size}}btn-{{options.toolbar.size}}{{/if}} btn-default" data-wysihtml5-command="alignJustifyStyle" title="{{locale.lists.justifyAlign}}" tabindex="-1">
     {{#if options.toolbar.fa}}
       <span class="fa fa-align-justify"></span>
     {{else}}
       <span class="glyphicon glyphicon-align-justify"></span>
     {{/if}}
-  </a>-->
+    </a>
     <a class="btn {{#if options.toolbar.size}}btn-{{options.toolbar.size}}{{/if}} btn-default" data-wysihtml5-command="insertUnorderedList" title="{{locale.lists.unordered}}" tabindex="-1">
     {{#if options.toolbar.fa}}
       <span class="fa fa-list-ul"></span>
